version 0.3:
	* add `lincom' linear combinations utility funcs
	* fix bug in disambiguate: 'fmt' arg was just ignored

version 0.2: 22/06/2010
	* add 'filterNames' function
	* add 'disambiguate' function
	* add 'isAmbiguous' alternative to 'isUnambiguous'

version 0.1: 15/06/2010
	initial release